<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/main_act_background"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:weightSum="100"
        android:orientation="vertical">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">
            <Button
                android:id="@+id/btn_back"
                android:onClick="onClickBtnBack"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:adjustViewBounds="true"
                android:background="@drawable/style_btn_back"
                app:backgroundTint="@null"
                app:layout_constraintDimensionRatio="H,16:11"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                android:id="@+id/games"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_title_3"
                android:textSize="32sp"
                android:textColor="@color/violet_01"
                android:textStyle="bold"
                android:fontFamily="sans-serif-condensed"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="93"
            android:orientation="vertical">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="90dp">
                <ImageView
                    android:id="@+id/img_select_game01"
                    android:elevation="3dp"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_margin="10dp"
                    android:src="@drawable/select_game01"
                    app:layout_constraintDimensionRatio="H,4:4"
                    app:layout_constraintStart_toStartOf="@id/game_1"
                    app:layout_constraintTop_toTopOf="@id/game_1"
                    app:layout_constraintBottom_toBottomOf="@id/game_1"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name_game01"
                    android:textColor="@color/violet_02"
                    android:textStyle="bold"
                    android:elevation="3dp"
                    android:textSize="22sp"
                    android:layout_marginStart="20dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/img_select_game01"
                    />

                <Button
                    android:onClick="onClickGame01"
                    android:id="@+id/game_1"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/style_sel_game_container"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="90dp">
                <ImageView
                    android:id="@+id/img_select_game02"
                    android:elevation="3dp"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_margin="10dp"
                    android:src="@drawable/select_game02"
                    app:layout_constraintDimensionRatio="H,4:4"
                    app:layout_constraintStart_toStartOf="@id/game_2"
                    app:layout_constraintTop_toTopOf="@id/game_2"
                    app:layout_constraintBottom_toBottomOf="@id/game_2"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name_game02"
                    android:textColor="@color/violet_02"
                    android:textStyle="bold"
                    android:elevation="3dp"
                    android:textSize="22sp"
                    android:layout_marginStart="20dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/img_select_game02"
                    />

                <Button
                    android:onClick="onClickGame02"
                    android:id="@+id/game_2"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/style_sel_game_container"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="90dp">
                <ImageView
                    android:id="@+id/img_select_game03"
                    android:elevation="3dp"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_margin="10dp"
                    android:src="@drawable/select_game03"
                    app:layout_constraintDimensionRatio="H,4:4"
                    app:layout_constraintStart_toStartOf="@id/game_3"
                    app:layout_constraintTop_toTopOf="@id/game_3"
                    app:layout_constraintBottom_toBottomOf="@id/game_3"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name_game03"
                    android:textColor="@color/violet_02"
                    android:textStyle="bold"
                    android:elevation="3dp"
                    android:textSize="22sp"
                    android:layout_marginStart="20dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/img_select_game03"
                    />

                <Button
                    android:onClick="onClickGame03"
                    android:id="@+id/game_3"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/style_sel_game_container"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:onClick="onClickMore"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sel_game_more"
                android:textSize="20sp"
                android:textColor="@color/white50"
                android:layout_gravity="center"
                android:gravity="center"
                />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>

