<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/background"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:elevation="3dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="100">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="18"
            android:scaleType="fitXY"
            android:src="@drawable/img_cloud"
            android:adjustViewBounds="true"
            tools:ignore="ContentDescription" />
        <LinearLayout
            android:orientation="vertical"
            android:layout_margin="20dp"
            android:background="@drawable/style_text_background"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="59"
            android:weightSum="100">
            <TextView
                android:id="@+id/tv_winOrLose"
                android:layout_weight="20"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="29sp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/win"
                tools:ignore="NestedWeights" />
            <ImageView
                android:id="@+id/iv_winOrLose"
                android:layout_gravity="center"
                android:layout_weight="35"
                android:src="@drawable/img_game_win"
                android:adjustViewBounds="true"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                tools:ignore="ContentDescription" />
            <LinearLayout
                android:gravity="center"
                android:layout_weight="20"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:baselineAligned="false">
                <LinearLayout
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/leftLives"
                        android:gravity="center"
                        android:layout_gravity="center"/>
                    <LinearLayout
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:id="@+id/life_01"
                            android:src="@drawable/game_heart"
                            android:adjustViewBounds="true"
                            android:layout_width="wrap_content"
                            android:layout_height="30dp"
                            tools:ignore="ContentDescription" />
                        <ImageView
                            android:id="@+id/life_02"
                            android:layout_marginStart="3dp"
                            android:src="@drawable/game_heart"
                            android:adjustViewBounds="true"
                            android:layout_width="wrap_content"
                            android:layout_height="30dp"
                            tools:ignore="ContentDescription" />
                        <ImageView
                            android:id="@+id/life_03"
                            android:layout_marginStart="3dp"
                            android:src="@drawable/game_heart"
                            android:adjustViewBounds="true"
                            android:layout_width="wrap_content"
                            android:layout_height="30dp"
                            tools:ignore="ContentDescription" />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bestScore"
                        android:gravity="center"
                        android:layout_gravity="center"/>
                    <LinearLayout
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:src="@drawable/game_bestscore"
                            android:adjustViewBounds="true"
                            android:layout_width="wrap_content"
                            android:layout_height="30dp"
                            tools:ignore="ContentDescription" />
                        <TextView
                            android:id="@+id/equal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:layout_marginEnd="5dp"
                            android:text="="
                            android:textSize="20sp"
                            tools:ignore="HardcodedText" />
                        <TextView
                            android:id="@+id/best_score"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:layout_marginEnd="20dp"
                            android:text="0"
                            android:textSize="23sp"
                            android:textStyle="bold"
                            tools:ignore="HardcodedText" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_weight="25"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:baselineAligned="false">
                <LinearLayout
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">
                    <Button
                        android:onClick="onClickExit"
                        android:id="@+id/btn_exit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dialog_end_exit"
                        android:textSize="18sp"
                        android:padding="15dp"
                        android:textAllCaps="false"
                        android:background="@drawable/style_dialog_btn_black"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">
                    <Button
                        android:onClick="onClickRepeat"
                        android:id="@+id/btn_repeat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:padding="15dp"
                        android:textAllCaps="false"
                        android:text="@string/dialog_end_repeat"
                        android:background="@drawable/style_dialog_btn_stroke"
                        />
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="23"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/img_stone"
            tools:ignore="ContentDescription" />
    </LinearLayout>
    <LinearLayout
        android:elevation="4dp"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="100">
        <LinearLayout
            android:id="@+id/line_1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="7"
            android:orientation="horizontal"
            tools:ignore="UselessParent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <Button
                    android:onClick="onClickBtnBack"
                    android:id="@+id/btn_back"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:adjustViewBounds="true"
                    android:background="@drawable/style_btn_back_black"
                    app:backgroundTint="@null"
                    app:layout_constraintDimensionRatio="H,16:11"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
